@@ -33,7 +33,7 @@
     1477 ./base/src/BlaILUSetupBSR.c
      172 ./base/src/BlaILUSetupCSR.c
     1271 ./base/src/BlaILUSetupSTR.c
-    3265 ./base/src/BlaIO.c
+    3333 ./base/src/BlaIO.c
      197 ./base/src/BlaOrderingCSR.c
      601 ./base/src/BlaSchwarzSetup.c
      966 ./base/src/BlaSmallMat.c
@@ -101,4 +101,4 @@
      247 ./base/src/SolMatFree.c
      419 ./base/src/SolSTR.c
      320 ./base/src/SolWrapper.c
-   86818 total
+   86886 total
